# Income_Calculator

./: .gitignore  Cargo.toml  DEPLOYMENT.md  PACKAGING_GUIDE.md  README.md  SYNC_ARCHITECTURE.md  THEME_USAGE.md  income_calculator.db
client/: Cargo.toml
client/src/: income.rs  lib.rs  options_template.rs
database/: Cargo.toml  income_calculator.db
database/migration/: Cargo.toml  README.md
database/migration/src/: lib.rs  m20260106_000001_create_client_info_tables.rs  m20260106_000002_create_income_worksheet_tables.rs  m20260106_000003_create_loan_and_calculation_tables.rs  m20260106_000003_create_options_template_tables.rs  m20260106_000004_create_settings_table.rs  m20260106_000007_create_fee_and_refinance_tables.rs  m20260109_000001_add_property_type_to_loan_information.rs  m20260109_000002_add_missing_columns_to_loan_information.rs  m20260109_000003_add_borrower_personal_info.rs  m20260109_000004_create_timeline_events_table.rs  m20260109_000005_create_outreach_templates_table.rs  m20260109_000006_create_campaigns_table.rs  m20260109_000007_create_notes_table.rs  m20260109_000008_create_documents_table.rs  m20260109_000009_create_conditions_table.rs  m20260112_000001_create_sync_tables.rs
database/src/: lib.rs
database/src/entities/: mod.rs  prelude.rs  settings.rs  sync_conflicts.rs  sync_devices.rs  sync_log.rs
database/src/entities/calculations/: mod.rs  savings_calculations.rs
database/src/entities/client/: ab_tests.rs  borrower.rs  campaigns.rs  condition.rs  document.rs  mod.rs  note.rs  outreach_templates.rs  timeline_events.rs
database/src/entities/income/: general_income_data.rs  general_income_entries.rs  mod.rs
database/src/entities/loans/: loan_information.rs
database/src/entities/refinance/: mod.rs  mortgage_refinance.rs  other_fees.rs
database/src/local/: SYNC_GUIDE.md  SYNC_QUICKSTART.md  api.rs  change_tracker.rs  conflict_resolver.rs  mod.rs  sync.rs  sync_manager.rs
databse/: Cargo.toml
databse/migration/: Cargo.toml  income_calculator.db
databse/migration/src/: lib.rs  m20260106_000000_create_mortgage_refinance_tables.rs  m20260106_000001_create_client_info_tables.rs  m20260106_000002_create_income_worksheet_tables.rs  m20260106_000003_create_options_template_tables.rs  m20260106_000005_add_borrower_fields.rs  m20260106_000006_create_financial_calculation_tables.rs  m20260106_000008_create_junction_tables.rs  m20260106_000009_create_w2_jobs_table.rs  m20260108_191141_add_income_columns.rs  main.rs
databse/src/: lib.rs
databse/src/entities/: benefit_to_borrower.rs  borrower.rs  consumer_debt.rs  existing_loans.rs  income_information.rs  mod.rs  mortgage_refinance.rs  new_loan_details.rs  other_fees.rs  prelude.rs  pricing_options.rs  settings.rs  w2_jobs.rs
databse/src/entities/income/: w2_jobs.rs
databse/src/entities/loans/: mod.rs
examples/: sync_client.rs  sync_server.rs  track_change.rs
frontend/: Cargo.toml  Dioxus.toml  README.md  income_calculator.db  tailwind.config.js  tailwind.css
frontend/assets/: tailwind.css
frontend/src/: main.rs  routes.rs
frontend/src/components/: accordion.rs  analytics_card.rs  checkbox.rs  date_picker.rs  file_upload.rs  income_accordion.rs  input.rs  mod.rs  search.rs  tab.rs  table.rs  theme.rs  theme_toggle.rs
frontend/src/components/calculator/: income.rs  mod.rs  result.rs
frontend/src/components/layout/: layout.rs  mod.rs  navbar.rs
frontend/src/views/: campaign_manager.rs  help.rs  home.rs  mod.rs  welcome.rs
frontend/src/views/dashboard/: add_client_modal.rs  analytics.rs  main_dash.rs  mod.rs  reports.rs  settings.rs
frontend/src/views/dashboard/by_id/: client.rs  mod.rs
frontend/src/views/dashboard/by_id/client/: client.rs  client_info_card.rs  client_overview.rs  general_income.rs  mod.rs  w2_jobs.rs
frontend/src/views/dashboard/by_id/conditions/: condition.rs  mod.rs
frontend/src/views/dashboard/by_id/document/: documents.rs  mod.rs  upload_documents.rs
frontend/src/views/dashboard/by_id/income_worksheet/: commission.rs  hourly.rs  info.rs  ira.rs  main.rs  mod.rs  ot_bonus.rs  other_income.rs  other_w2.rs  pension.rs  salary.rs  social_security.rs  w2_jobs.rs
frontend/src/views/dashboard/by_id/notes/: mod.rs  note.rs
frontend/src/views/dashboard/by_id/options_template/: benefit_to_borrower.rs  consumer_debt.rs  debt_to_income.rs  income_information.rs  loan_information.rs  mod.rs  mortgage_payoffs.rs  new_loan.rs  options_template.rs  other_fees.rs  pricing.rs  savings.rs  title_fees.rs
frontend/src/views/dashboard/by_id/outreach/: mod.rs  templates.rs  templates_page.rs  timeline.rs
frontend/src/views/dashboard/by_id/outreach/templates/: components.rs  engine.rs  mod.rs  prebuilt.rs
frontend/src/views/dashboard/income_worksheet/: hourly.rs  info.rs  ira.rs  main.rs  ot_bonus.rs  pension.rs  salary.rs
frontend/src/views/dashboard/options_template/: consumer_debt.rs  loan_information.rs  mortgage_payoffs.rs  new_loan.rs  options_template.rs  savings.rs  title_fees.rs
frontend/src/views/worksheet/: commission.rs  hourly.rs  info.rs  ira.rs  main.rs  mod.rs  ot_bonus.rs  other_income.rs  other_w2.rs  pension.rs  salary.rs  social_security.rs
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/converters/: mod.rs  parsers.rs  to_domain.rs  to_entity.rs
repository/src/repositories/: borrower.rs  campaigns.rs  condition.rs  document.rs  general_income.rs  income.rs  income_new.rs  loan.rs  mod.rs  note.rs  options_template.rs  outreach_templates.rs  settings.rs  timeline_events.rs  w2_jobs.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: condition.rs  consumer_debt.rs  document.rs  enums.rs  financial_models.rs  frontend_models.rs  income.rs  loan_models.rs  main.rs  mod.rs  note.rs  settings.rs
