[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
database = { path = "../databse" }
sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-uuid" ] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.35"
num-traits = "0.2"