[package]
name = "database"
version = "0.1.0"
edition = "2021"

# This is a library crate
[lib]
path = "src/lib.rs"

[dependencies]
# Your database-related dependencies go here
sea-orm = { version = "1.1.14", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
sea-orm-migration = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["full"] }


migration = { path = "migration" }
shared = { path = "../shared" }
