[package]
name = "frontend"
version = "0.1.0"
authors = ["RayburnCode <rayburncode@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }

shared = { path = "../shared" }
client = { path = "../client" }
chrono = "0.4.42"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
